src/styles/markdown.css
.dark {
  .shiki,
  .shiki span {
    color: var(--s-dark, inherit);
    --twoslash-popup-bg: #191919;
    --twoslash-border-color: #8884;
  }

  .shiki {
    background-color: #0e0e0e;
  }
}

html:not(.dark) {
  .shiki,
  .shiki span {
    color: var(--s-light, inherit);
    /* background-color: #fafafa; */
    --twoslash-popup-bg: #fafafa;
  }
}

.twoslash {
  ul {
    font-size: 1em !important;

    > li {
      padding: 1px;
      margin: 0;

      &::before {
        display: none;
      }
    }
  }
}

.twoslash-query-presisted {
  .twoslash-popup-info {
    transform: translate(0, 1.6em);
  }
}

/* Prose */
.prose {
  color: var(--fg);

  pre:not(.shiki) {
    padding: 0;
    margin: 0;
    background: transparent;
  }

  img {
    width: 100%;
  }

  p > img {
    width: 100%;
    --uno: shadow rounded-lg;
    transform: scale(1.05);
    margin: 2.6em 0;
  }

  a {
    font-weight: inherit;
    text-decoration: none;
    border: 1px dashed var(--fg);
    transition: border 0.3s ease-in-out;

    &:hover {
      border: 1px solid var(--fg-deep);
    }

    &.artwork-link {
      /* dashed border all around */
      border: 1px dashed var(--fg);

      &:hover {
        border: 1px dashed var(--fg-deep);
      }
    }

    code {
      color: inherit;
    }
  }

  hr {
    width: 50px;
    margin: 2em auto;
  }
}

.shiki {
  font-family: var(--font-mono);
  font-size: 0.92em;
  line-height: 1.4;
  margin: 0.5em 0;
  white-space: pre-wrap;
}

.project-grid {
  a.item {
    background: transparent;
    font-size: 1.1rem;
    max-width: 100%;
    padding: 0.5rem 0.875rem 0.875rem;

    &:hover {
      background: #88888811;
    }

    &::before {
      content: '';
      position: absolute;
      inset-block: -0.51rem;
      inset-inline: -0.51rem;
    }
  }
}

.posts {
  a.item {
    /* note and post listings */
    transition: 0.2s all ease-out;
    text-decoration: none;
    border: none !important;
    opacity: 0.6;
  }
}

a.item {
  &:hover {
    opacity: 1;
  }
}

a.header-anchor {
  float: left;
  margin-top: 0.125em;
  margin-left: -1.2em;
  padding-right: 0.5em;
  font-size: 0.85em;
  opacity: 0;
  text-decoration: none;
  border: 0 !important;

  &:hover,
  &:focus {
    text-decoration: none;
  }
}

h1:hover .header-anchor,
h1:focus .header-anchor,
h2:hover .header-anchor,
h2:focus .header-anchor,
h3:hover .header-anchor,
h3:focus .header-anchor,
h4:hover .header-anchor,
h4:focus .header-anchor,
h5:hover .header-anchor,
h5:focus .header-anchor,
h6:hover .header-anchor,
h6:focus .header-anchor {
  opacity: 0.5;
}

.prose {
  iframe,
  video {
    margin: 1.5em 0;
    width: 100%;
    border-radius: 0.375rem;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  }
  blockquote {
    font-weight: normal;
    font-style: normal;
    line-height: 1.6em;
    padding: 0.5em 1em;
    margin-left: -1.1em;

    > * {
      opacity: 0.7;
    }

    > :first-child {
      margin-top: 0;
    }

    > :last-child {
      margin-bottom: 0;
    }

    p:first-of-type {
      &::before {
        content: none;
      }

      &::after {
        content: none;
      }
    }
  }
}

.table-of-contents {
  position: fixed;
  top: 90px;
  bottom: 0;
  font-size: 0.8em;
  right: 20px;
  z-index: 200;
  overflow: hidden;
  --uno: hidden sm-flex flex-col w-100px lg-w-200px xl-w-300px;

  > ul {
    text-overflow: ellipsis;
    height: 100%;
    overflow-y: auto;
    --uno: rounded op0 mt-1 pb-5 transition duration-700;
  }

  ul > li {
    padding-left: 0.8rem;
    line-height: 1.5em;
    margin-top: 0.5em;

    &::before {
      display: none;
    }

    > a {
      --uno: op75 hover-op100 transition;
    }
  }
}

.table-of-contents-anchor {
  --uno: mx2 w-7 h-7 text-lg flex items-center justify-center bg-base bg-op-20 rounded text-hex-8887 border border-base
    shadow md: border-transparent md: shadow-none transition duration-400;
}

*:hover > .table-of-contents > .table-of-contents-anchor,
.toc-always-on .table-of-contents > .table-of-contents-anchor {
  --uno: text-inherit;
}

.toc-always-on .table-of-contents > ul {
  opacity: 0.6;
}

*:hover > .table-of-contents > ul {
  opacity: 0.75;
}

.code-wrap .line {
  white-space: break-spaces;
}

